# systools

./: CHANGELOG.md  README.md  varikssystools.cabal
src/VarikSysTools/: Base.hs  Sysctl.hs
src/VarikSysTools/Info/: CPU.hs
src/VarikSysTools/Info/Temperature/: CPU.hs  CPU.hs1
src/VarikSysTools/Info/Temperature/CPU/: OpenBSD.hs
