cabal-version:      3.0
name:               varikssystools
version:            0.1.0.0
synopsis:           Cross-platform tools for systems administration

-- description:
homepage:

-- bug-reports:
license:            Unlicense
license-file:       LICENSE
author:             Varik Valefor
maintainer:         varikvalefor@aol.com

copyright:          (C) Varik Valefor 2022.  No rights reserved.
category:           System
extra-source-files: CHANGELOG.md

library
  ghc-options:      -Wall
  exposed-modules:  VarikSysTools.Info.Temperature.CPU

  build-depends:    base           ^>= 4.14.3.0,
                    scientific      >= 0.3.0.0      && < 0.4,
                    split           >= 0.2.0.0      && < 0.3,
                    process         >= 1.6.0.0      && < 1.7
  hs-source-dirs:   src
  default-language: Haskell2010
  other-modules:    VarikSysTools.Sysctl
                    VarikSysTools.Base
                    VarikSysTools.Info.Temperature.CPU.OpenBSD
